--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,8 @@
 $color-primary: #1b1b1b;
 
 $color-secondary: #f7df1e;
+
+$color-tertiary: #ee2a2a;
 //FONT VARIABLES
 $font-primary: "Raleway", Arial, Helvetica, sans-serif;
 
@@ -44,4 +46,28 @@ body {
     )
     [center-end] minmax(6rem, 1fr) [full-end];
   grid-template-rows: 100vh;
+}
+////////BUTTON
+.btn {
+  background-color: $color-secondary;
+  color: $color-primary;
+  padding: 1.5rem 2.5rem;
+  border: none;
+  border-radius: 3px;
+  font-size: 2rem;
+  font-family: $font-primary;
+  text-transform: uppercase;
+  margin-top: 3rem;
+  transition: all 0.2s;
+  cursor: pointer;
+
+  &:hover {
+    transform: translateY(-3px);
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    transform: translateY(-1px);
+  }
 }
