--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,12 +1,12 @@
 .contact {
   grid-column: center-start / center-end;
-  margin: 10rem 0 15rem;
+  margin: 10rem 0;
 
   &__content {
-    margin-top: 5rem;
+    margin-top: 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 3rem;
+    grid-gap: 6rem;
   }
 
   &__details {
@@ -20,7 +20,7 @@
 
   &__details-item {
     margin-bottom: 2rem;
-    font-size: 2.4rem;
+    font-size: 2.3rem;
 
     span {
       font-weight: bold;
@@ -39,5 +39,36 @@
     color: $color-secondary;
   }
   &__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    &-input,
+    &-textarea {
+      width: 80%;
+      font-family: inherit;
+      font-size: 2rem;
+      color: inherit;
+      padding: 1.5rem 2rem;
+      margin: 1rem 0;
+      border-radius: 2px;
+      border: 5px solid $color-primary;
+    }
+
+    &-input {
+      &:focus {
+        outline: none;
+        border-bottom: 5px solid $color-secondary;
+      }
+
+      &:focus:invalid {
+        border-bottom: 5px solid $color-tertiary;
+      }
+    }
+
+    &-textarea {
+      height: 20rem;
+    }
   }
 }
